tests/paczka1/small_fuzzy/82334445.err
Error in line 1: hKzFcgxRI A291 962,6
Error in line 4: wOACILV S623 37,1
Error in line 12: puS4QuTh1 A252 12,6
